fixed bannertext color showing white on smaller device

--- a/joycecakes/static/css/_767.css
+++ b/joycecakes/static/css/_767.css
@@ -26,7 +26,6 @@ nav {
 
 }
 #bannertext p{
-	color: #eeeeee;
 	font-size: 0.8em;
 	text-align: center;
 	margin: 5px;	
